Update GROQ_API_KEY value in Langchain_RAG.ipynb

--- a/Langchain_RAG.ipynb
+++ b/Langchain_RAG.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GROQ_API_KEY = \"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\"\n",
+    "GROQ_API_KEY = \"gsk\"\n",
     "\n",
     "llm = ChatOpenAI(\n",
     "    openai_api_key=GROQ_API_KEY,\n",
